--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
+    <head> 
+        <link rel="stylesheet"href=stylecss
+    </head>
     <body>
+    
         <header>
             <a href="#price">Прайс-лист</a> <a href="#reviews">Отзывы</a> <a href="#photos">Фотографии</a>
         </header>
